--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </nav>
     <header>
       <div class="header-content">
-      <img src="Zainab.jpg" alt="Zainab's photo" class="porfile-pic  reveal">
+      <img src="zainab.jpg/zainab.jpg" alt="Zainab's photo" class="porfile-pic  reveal">
       <h1 class=" reveal">Hello,I'm Zainab</h1>
       <p> hjkl</p>
     </div> 
