--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <div class="header-content">
       <img src="zainab.jpg" alt="Zainab's photo" class="porfile-pic  reveal">
       <h1 class=" reveal">Hello,I'm Zainab</h1>
+        <p class="subtext reveal">Web Development Enthusiast & designer</p>
       <p> hjkl</p>
     </div> 
    
