--- a/index.html
+++ b/index.html
@@ -62,6 +62,21 @@
       }
     }
   });
+      const reveals = document.querySelectorAll('.reveal');
+
+  function revealOnScroll() {
+    for (let i = 0; i < reveals.length; i++) {
+      const windowHeight = window.innerHeight;
+      const elementTop = reveals[i].getBoundingClientRect().top;
+      const elementVisible = 100; 
+      if (elementTop < windowHeight - elementVisible) {
+        reveals[i].classList.add('show');
+      } 
+    }
+  }
+
+  window.addEventListener('scroll', revealOnScroll);
+  window.addEventListener('load', revealOnScroll);
     </script>
   </body>
   </html>
