--- a/index.html
+++ b/index.html
@@ -47,7 +47,17 @@
     </section>
     </main>
     <footer>
-      <p>@ 2025 Zainab.ALL rights reserves.</p>
+    <footer class="footer">
+        <div class="social-icons">
+          <a href="https://github.com/zainabkhadra-234" target="_blank">
+            <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub" />
+          </a>
+          <a href="https://instagram.com/zainab.khdra1" target="_blank">
+            <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram" />
+          </a>
+        </div>
+        <p>&copy; 2025 Zainab. All rights reserved.</p>
+      </footer
     </footer>
 
     <script>
