--- a/index.html
+++ b/index.html
@@ -28,13 +28,18 @@
       <p>I'm Zainab,passionate about enhancing my skills in programming and we development<br> Currently, I'm working on improving my website development skills with the goal of creating practical and visually appealing projects that make a real impact</p>
     </section>
     <section id="projects">
-      <h2>My Projects</h2>
-      <ul>
-        <li>Project 1: Personal Portfolio to showcase my skills and projects</li>
-        <li> Project 2:Cake Shop Website to display and sell cakes</li>
-        <li>Project 3:Task managment page-A simple page to organize and manage tasks and to-do lists</li>
-        <li>project 4: Blog Layout- A blog layouth I designed to understand the basics of creating and displaying blog posts</li>
-      </ul>
+  <h2>My Projects</h2>
+  <ul>
+    <li>
+      <a href="https://github.com/zainabkhadra-234/calculator" target="_blank">
+        Project 1: Calculator
+      </a>
+    </li>
+    <li>
+      <a href="https://github.com/zainabkhadra-234/Box-model" target="_blank">
+        Project 2: Box model
+      </a>
+    </li>
     </section>
     <section id="contact">
       <h2>Contact Me</h2>
