--- a/index.html
+++ b/index.html
@@ -41,6 +41,15 @@
       </a>
     </li>
     </section>
+      <section id="skills">
+  <h2>My Skills</h2>
+  <ul class="skills-list">
+    <li>Programming in C</li>
+    <li>Programming in Java</li>
+    <li>Web Development with HTML</li>
+    <li>Styling with CSS</li>
+  </ul>
+</section>
     <section id="contact">
       <h2>Contact Me</h2>
       <form is="contact-form">
