--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <section id="about">
       <h2>About Me</h2>
-      <p>I'm Zainab,passionate about enhancing my skills in programming and we development<br> Currently, I'm working on improving my website development skills with the goal of creating practical and visually appealing projects that make a real impact</p>
+      <p>I'm Zainab,passionate about enhancing my skills in programming and web development<br> Currently, I'm working on improving my website development skills with the goal of creating practical and visually appealing projects that make a real impact</p>
     </section>
     <section id="projects">
   <h2>My Projects</h2>
